// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Progress examples > Completed determinate circular progress indicator should render correctly 1`] = `
<div>
  <div
    aria-labelledby="large-complete-circular-progress completed-circular-screen-reader-message"
    aria-valuenow="100"
    class="v-progress v-progress-circular"
    role="progressbar"
    style="animation-play-state: running; --v-progress-circular-size: 72px;"
  >
    <svg
      class="v-progress-circular-track"
    >
      <circle
        class="v-progress-circular-background"
      />
      <circle
        class="v-progress-circular-bar"
        style="stroke-dasharray: 213.62830044410595, 213.62830044410595; stroke-dashoffset: 0;"
      />
    </svg>
    <div
      class="v-typography-body-2-bold v-progress-label"
      id="large-complete-circular-progress"
    >
      100
      %
    </div>
  </div>
  <span
    class="v-sr"
    id="completed-circular-screen-reader-message"
    role="alert"
  >
    Loading complete.
  </span>
</div>
`;

exports[`Progress examples > Completed linear progress indicator should render correctly 1`] = `
<div>
  <progress
    aria-valuenow="100"
    class="v-progress v-progress-bar v-progress-complete v-my-8"
    id="complete-linear-progress"
    max="100"
    style="animation-play-state: running;"
    value="100"
  />
  <label
    class="v-progress-label"
    for="complete-linear-progress"
  >
    <span
      class="v-flex v-gap-4"
      role="alert"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-success"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-secondary"
          d="M8 0C9.30716 0 10.5403 0.315171 11.6299 0.871094L10.1162 2.38477C9.45802 2.13659 8.74502 2 8 2C4.68629 2 2 4.68629 2 8C2 11.3137 4.68629 14 8 14C11.3137 14 14 11.3137 14 8C14 7.78891 13.9881 7.58047 13.9668 7.375L15.6768 5.75C15.8857 6.46393 16 7.21854 16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0Z"
        />
        <path
          class="v-icon-primary"
          d="M15 3.46582L7.72852 10.9961L5 8.18262L6.42578 6.71289L7.72852 8.05664L13.5742 1.99609L15 3.46582Z"
        />
      </svg>
      File is now uploaded.
    </span>
    <span>
      100%
    </span>
  </label>
</div>
`;

exports[`Progress examples > Custom size determinate circular progress indicator should render correctly 1`] = `
<div>
  <div
    aria-labelledby="circular-custom-size-determinate-progress"
    aria-valuenow="0"
    class="v-progress v-progress-circular"
    role="progressbar"
    style="animation-play-state: running; --v-progress-circular-size: 100px;"
  >
    <svg
      class="v-progress-circular-track"
    >
      <circle
        class="v-progress-circular-background"
      />
      <circle
        class="v-progress-circular-bar"
        style="stroke-dasharray: 0, 301.59289474462014; stroke-dashoffset: 0;"
      />
    </svg>
    <label
      class="v-progress-label"
      id="circular-custom-size-determinate-progress"
    >
      <div
        class="v-typography-body-2-bold v-progress-label"
      >
        0
        %
      </div>
    </label>
  </div>
  <span
    class="v-sr"
    role="alert"
  />
  <div
    class="v-flex v-gap-12 v-my-12"
  >
    <button
      class="v-button"
    >
      Start
    </button>
    <button
      class="v-button v-button-secondary"
    >
      Reset
    </button>
  </div>
</div>
`;

exports[`Progress examples > Determinate linear progress indicator should render correctly 1`] = `
<div>
  <progress
    class="v-progress v-progress-bar v-my-8"
    id="determinate-linear-progress"
    max="100"
    style="animation-play-state: running;"
    value="0"
  />
  <label
    class="v-progress-label"
    for="determinate-linear-progress"
  >
    <span>
      Filename.jpg
    </span>
    <span>
      0
      %
    </span>
    <span
      class="v-sr"
      role="alert"
    />
  </label>
  <div
    class="v-flex v-gap-12 v-my-12"
  >
    <button
      class="v-button"
    >
      Start
    </button>
    <button
      class="v-button v-button-secondary"
    >
      Reset
    </button>
  </div>
</div>
`;

exports[`Progress examples > Determinate linear progress indicator without visible label should render correctly 1`] = `
<div>
  <progress
    class="v-progress v-progress-bar v-my-8"
    id="no-label-determinate-linear-progress"
    max="100"
    style="animation-play-state: running;"
    value="0"
  />
  <label
    class="v-progress-label"
    for="no-label-determinate-linear-progress"
  >
    <span>
      0
      %
    </span>
    <span
      class="v-sr"
      role="alert"
    />
  </label>
  <div
    class="v-flex v-gap-12 v-my-12"
  >
    <button
      class="v-button"
    >
      Start
    </button>
    <button
      class="v-button v-button-secondary"
    >
      Reset
    </button>
  </div>
</div>
`;

exports[`Progress examples > Error determinate circular progress indicator should render correctly 1`] = `
<div>
  <span
    class="v-input-message v-input-error"
    role="alert"
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-visa v-icon-tiny v-icon-error"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M8 0C12.4183 0 16 3.58172 16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0ZM8 2C4.68629 2 2 4.68629 2 8C2 11.3137 4.68629 14 8 14C11.3137 14 14 11.3137 14 8C14 4.68629 11.3137 2 8 2Z"
      />
      <path
        class="v-icon-primary"
        d="M8 10C8.55228 10 9 10.4477 9 11C9 11.5523 8.55228 12 8 12C7.44772 12 7 11.5523 7 11C7 10.4477 7.44772 10 8 10ZM9 8H7V4H9V8Z"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
    This is required text that describes the error in more detail.
  </span>
</div>
`;

exports[`Progress examples > Error linear progress indicator should render correctly 1`] = `
<div>
  <progress
    class="v-progress v-progress-bar v-progress-error v-my-8"
    id="error-determinate-linear-progress"
    max="100"
    style="animation-play-state: running;"
    value="0"
  />
  <label
    class="v-progress-label"
    for="error-determinate-linear-progress"
  >
    <span
      class="v-flex v-gap-4"
      role="alert"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-error"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-secondary"
          d="M8 0C12.4183 0 16 3.58172 16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0ZM8 2C4.68629 2 2 4.68629 2 8C2 11.3137 4.68629 14 8 14C11.3137 14 14 11.3137 14 8C14 4.68629 11.3137 2 8 2Z"
        />
        <path
          class="v-icon-primary"
          d="M8 10C8.55228 10 9 10.4477 9 11C9 11.5523 8.55228 12 8 12C7.44772 12 7 11.5523 7 11C7 10.4477 7.44772 10 8 10ZM9 8H7V4H9V8Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
      This is required text that describes the error in more detail.
    </span>
    <span>
      0%
    </span>
  </label>
</div>
`;

exports[`Progress examples > Indeterminate linear progress indicator should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-col v-gap-12"
  >
    <div
      class="v-flex v-gap-12 v-my-12"
    >
      <button
        class="v-button"
      >
        Start
      </button>
      <button
        class="v-button v-button-secondary"
      >
        Reset
      </button>
      <button
        class="v-button v-button-secondary"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-media-pause-alt"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-secondary"
            d="M8 0C12.4183 0 16 3.58172 16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0ZM8 2C4.68629 2 2 4.68629 2 8C2 11.3137 4.68629 14 8 14C11.3137 14 14 11.3137 14 8C14 4.68629 11.3137 2 8 2Z"
          />
          <path
            class="v-icon-primary"
            d="M7 11H5V5H7V11ZM11 11H9V5H11V11Z"
          />
          <defs>
            <clippath>
              <rect
                height="16"
                width="16"
              />
            </clippath>
          </defs>
        </svg>
        Pause
      </button>
    </div>
  </div>
</div>
`;

exports[`Progress examples > Indeterminate linear progress indicator without visible label should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-col v-gap-12"
  >
    <div
      class="v-flex v-gap-12 v-my-12"
    >
      <button
        class="v-button"
      >
        Start
      </button>
      <button
        class="v-button v-button-secondary"
      >
        Reset
      </button>
      <button
        class="v-button v-button-secondary"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-media-pause-alt"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-secondary"
            d="M8 0C12.4183 0 16 3.58172 16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0ZM8 2C4.68629 2 2 4.68629 2 8C2 11.3137 4.68629 14 8 14C11.3137 14 14 11.3137 14 8C14 4.68629 11.3137 2 8 2Z"
          />
          <path
            class="v-icon-primary"
            d="M7 11H5V5H7V11ZM11 11H9V5H11V11Z"
          />
          <defs>
            <clippath>
              <rect
                height="16"
                width="16"
              />
            </clippath>
          </defs>
        </svg>
        Pause
      </button>
    </div>
  </div>
</div>
`;

exports[`Progress examples > Large determinate circular progress indicator should render correctly 1`] = `
<div>
  <div
    aria-labelledby="large-determinate-circular-progress"
    aria-valuenow="0"
    class="v-progress v-progress-circular"
    role="progressbar"
    style="animation-play-state: running; --v-progress-circular-size: 72px;"
  >
    <svg
      class="v-progress-circular-track"
    >
      <circle
        class="v-progress-circular-background"
      />
      <circle
        class="v-progress-circular-bar"
        style="stroke-dasharray: 0, 213.62830044410595; stroke-dashoffset: 0;"
      />
    </svg>
    <label
      class="v-progress-label"
      id="large-determinate-circular-progress"
    >
      <div
        class="v-typography-body-2-bold v-progress-label"
      >
        0
        %
      </div>
    </label>
  </div>
  <span
    class="v-sr"
    role="alert"
  />
  <div
    class="v-flex v-gap-12 v-my-12"
  >
    <button
      class="v-button"
    >
      Start
    </button>
    <button
      class="v-button v-button-secondary"
    >
      Reset
    </button>
  </div>
</div>
`;

exports[`Progress examples > Large indeterminate circular progress indicator should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-col v-gap-12"
  >
    <div
      class="v-flex v-gap-12 v-my-12"
    >
      <button
        class="v-button"
      >
        Start
      </button>
      <button
        class="v-button v-button-secondary"
      >
        Reset
      </button>
      <button
        class="v-button v-button-secondary"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-media-pause-alt"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-secondary"
            d="M8 0C12.4183 0 16 3.58172 16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0ZM8 2C4.68629 2 2 4.68629 2 8C2 11.3137 4.68629 14 8 14C11.3137 14 14 11.3137 14 8C14 4.68629 11.3137 2 8 2Z"
          />
          <path
            class="v-icon-primary"
            d="M7 11H5V5H7V11ZM11 11H9V5H11V11Z"
          />
          <defs>
            <clippath>
              <rect
                height="16"
                width="16"
              />
            </clippath>
          </defs>
        </svg>
        Pause
      </button>
    </div>
  </div>
</div>
`;

exports[`Progress examples > Reusable progress indicator should render correctly 1`] = `
<div>
  <div>
    <style>
      
        .circular-progress-label {
          block-size: 100%;
          inline-size: 100%;
      }
      
    </style>
    <progress
      class="v-progress v-progress-bar v-my-8"
      id="test-id-0-progress"
      max="100"
      value="70"
    />
    <label
      class="v-progress-label"
      for="test-id-0-progress"
    >
      <div
        class="v-flex v-gap-4"
        role="alert"
      >
        Filename.jpg
      </div>
      <span>
        70
        %
      </span>
      <span
        class="v-screen-reader"
        role="alert"
      >
        Loading...
      </span>
    </label>
    <div
      style="margin-top: 24px;"
    >
      <details
        class="v-accordion"
        id="test-id-1"
      >
        <summary
          class="v-button v-button-large v-button-secondary v-accordion-heading v-gap-2 v-typography-body-2-medium"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-accordion-toggle-icon v-accordion-toggle-icon-open"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
          <div
            class="v-align-items-center v-flex v-gap-6"
          >
            Customize demo
          </div>
        </summary>
        <div
          class="v-accordion-panel v-px-32"
        >
          <form>
            <div
              class="v-flex v-flex-col v-gap-16"
              style="margin-bottom: 32px;"
            >
              <div
                class="v-flex v-flex-col v-gap-4"
              >
                <label
                  class="v-label"
                  for="test-id-2-input"
                >
                  Message
                   
                </label>
                <div
                  class="v-flex v-flex-col v-flex-grow v-gap-4"
                >
                  <div
                    class="v-surface v-input-container"
                  >
                    <input
                      aria-invalid="false"
                      class="v-input"
                      id="test-id-2-input"
                      type="text"
                      value="Filename.jpg"
                    />
                  </div>
                </div>
              </div>
              <div
                class="v-flex v-flex-col v-flex-wrap v-gap-4"
              >
                <label
                  class="v-label"
                  for="test-id-3-select"
                  id="test-id-3-label"
                >
                  Message type
                   
                </label>
                <div
                  class="v-flex v-flex-col v-flex-grow v-gap-4"
                >
                  <div
                    class="v-surface v-input-container"
                  >
                    <select
                      aria-describedby="test-id-3-message"
                      aria-invalid="false"
                      class="v-input"
                      id="test-id-3-select"
                    >
                      <option
                        hidden=""
                      />
                      <option
                        value="subtle"
                      >
                        Subtle
                      </option>
                      <option
                        value="information"
                      >
                        Information
                      </option>
                      <option
                        value="error"
                      >
                        Error
                      </option>
                      <option
                        value="success"
                      >
                        Success
                      </option>
                      <option
                        value="warning"
                      >
                        Warning
                      </option>
                    </select>
                    <svg
                      aria-hidden="true"
                      class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down"
                      focusable="false"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        class="v-icon-primary"
                        d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
                      />
                    </svg>
                  </div>
                  <span
                    class="v-input-message"
                    id="test-id-3-message"
                  />
                </div>
              </div>
              <div
                class="v-flex v-flex-col v-gap-4"
              >
                <label
                  class="v-label"
                  for="test-id-4-input"
                >
                  Progress
                   
                </label>
                <div
                  class="v-flex v-flex-col v-flex-grow v-gap-4"
                >
                  <div
                    class="v-surface v-input-container"
                  >
                    <input
                      aria-invalid="false"
                      class="v-input"
                      id="test-id-4-input"
                      type="number"
                      value="70"
                    />
                  </div>
                </div>
              </div>
              <div
                class="v-flex v-flex-col v-flex-wrap v-gap-4"
              >
                <label
                  class="v-label"
                  for="test-id-5-select"
                  id="test-id-5-label"
                >
                  Type
                   
                </label>
                <div
                  class="v-flex v-flex-col v-flex-grow v-gap-4"
                >
                  <div
                    class="v-surface v-input-container"
                  >
                    <select
                      aria-describedby="test-id-5-message"
                      aria-invalid="false"
                      class="v-input"
                      id="test-id-5-select"
                    >
                      <option
                        hidden=""
                      />
                      <option
                        value="circular"
                      >
                        Circular
                      </option>
                      <option
                        value="linear"
                      >
                        Linear
                      </option>
                    </select>
                    <svg
                      aria-hidden="true"
                      class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down"
                      focusable="false"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        class="v-icon-primary"
                        d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
                      />
                    </svg>
                  </div>
                  <span
                    class="v-input-message"
                    id="test-id-5-message"
                  />
                </div>
              </div>
              <div
                class="v-flex"
              >
                <input
                  aria-invalid="false"
                  checked=""
                  class="v-checkbox"
                  id="test-id-6-input"
                  type="checkbox"
                />
                <div
                  class="v-flex v-flex-col v-gap-2 v-my-10"
                >
                  <label
                    class="v-label"
                    for="test-id-6-input"
                  >
                    Determinate
                  </label>
                </div>
              </div>
              <span
                class="v-input-message v-mt-4"
                id="test-id-6-message"
              />
              <div
                class="v-flex"
              >
                <input
                  aria-invalid="false"
                  class="v-checkbox"
                  id="test-id-7-input"
                  type="checkbox"
                />
                <div
                  class="v-flex v-flex-col v-gap-2 v-my-10"
                >
                  <label
                    class="v-label"
                    for="test-id-7-input"
                  >
                    Hide message
                  </label>
                </div>
              </div>
              <span
                class="v-input-message v-mt-4"
                id="test-id-7-message"
              />
              <div
                class="v-flex"
              >
                <input
                  aria-invalid="false"
                  class="v-checkbox"
                  id="test-id-8-input"
                  type="checkbox"
                />
                <div
                  class="v-flex v-flex-col v-gap-2 v-my-10"
                >
                  <label
                    class="v-label"
                    for="test-id-8-input"
                  >
                    Hide progress
                  </label>
                </div>
              </div>
              <span
                class="v-input-message v-mt-4"
                id="test-id-8-message"
              />
            </div>
            <div
              class="v-flex v-gap-16"
              style="margin-bottom: 16px;"
            >
              <button
                class="v-button"
                type="submit"
              >
                Apply
              </button>
              <button
                class="v-button v-button-secondary"
                type="button"
              >
                Reset
              </button>
            </div>
          </form>
        </div>
      </details>
    </div>
  </div>
</div>
`;

exports[`Progress examples > Small determinate circular progress indicator should render correctly 1`] = `
<div>
  <div
    aria-labelledby="small-determinate-circular-progress"
    aria-valuenow="0"
    class="v-progress v-progress-circular v-progress-circular-small"
    role="progressbar"
    style="animation-play-state: running; --v-progress-circular-size: 48px;"
  >
    <svg
      class="v-progress-circular-track"
    >
      <circle
        class="v-progress-circular-background"
      />
      <circle
        class="v-progress-circular-bar"
        style="stroke-dasharray: 0, 138.23007675795088; stroke-dashoffset: 0;"
      />
    </svg>
    <div
      class="v-typography-body-2-bold v-progress-label"
      id="small-determinate-circular-progress"
    >
      0
      %
    </div>
  </div>
  <span
    class="v-sr"
    role="alert"
  />
  <div
    class="v-flex v-gap-12 v-my-12"
  >
    <button
      class="v-button"
    >
      Start
    </button>
    <button
      class="v-button v-button-secondary"
    >
      Reset
    </button>
  </div>
</div>
`;

exports[`Progress examples > Small indeterminate circular progress indicator should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-col v-gap-12"
  >
    <div
      class="v-flex v-gap-12 v-my-12"
    >
      <button
        class="v-button"
      >
        Start
      </button>
      <button
        class="v-button v-button-secondary"
      >
        Reset
      </button>
      <button
        class="v-button v-button-secondary"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-media-pause-alt"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-secondary"
            d="M8 0C12.4183 0 16 3.58172 16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0ZM8 2C4.68629 2 2 4.68629 2 8C2 11.3137 4.68629 14 8 14C11.3137 14 14 11.3137 14 8C14 4.68629 11.3137 2 8 2Z"
          />
          <path
            class="v-icon-primary"
            d="M7 11H5V5H7V11ZM11 11H9V5H11V11Z"
          />
          <defs>
            <clippath>
              <rect
                height="16"
                width="16"
              />
            </clippath>
          </defs>
        </svg>
        Pause
      </button>
    </div>
  </div>
</div>
`;
